@@ -814,7 +814,11 @@ failed, any TODO tests unexpectedly succeeded, or any parse errors.
 
 sub has_problems {
     my $self = shift;
-    return $self->failed || $self->todo_passed || $self->parse_errors;
+    return $self->failed 
+        || $self->todo_passed 
+        || $self->parse_errors 
+        || $self->wait 
+        || $self->exit;
 }
 
 ##############################################################################
