@@ -1,0 +1,9 @@
+print <<DUMMY_TEST;
+1..4
+ok 1
+ok 2
+ok 3
+DUMMY_TEST
+
+use if $^O eq 'VMS', vmsish => 'hushed';
+exit 1;
