@@ -50,6 +50,8 @@ Revision history for TAP-Parser
     - Added support for timer option to TAPx::Harness which causes the
       elapsed time for each test to be displayed.
     - Setup tapx-dev@hexten.net mailing list.
+    - (#24679) TAPx::Harness now reports failure for tests that die
+      after completing all subtests.
       
 0.50_06 18 January 2007
     - Fixed doc typo in examples/README [rt.cpan.org #24409]
